# lbc_immo

./: LICENSE  cplog.sh  launch  launch.sh  lbc_immo.umap  pyproject.toml
data/: lbc_export_20230125_1557.csv  lbc_immo1.umap  lyontransport.geojson  toulousetransport.geojson  transport.geojson
lbc_immo/: core.py  dataparser.py  datawork.py  draft.py  featurewriters.py  main.py
tests/: test_datawork.py  test_featurewriters.py
