[tool.poetry]
name = "lbc-immo"
version = "0.1.0"
description = ""
authors = ["Pierre-Loic FELTER <plfelter@argans.co.uk>"]
readme = "README.md"
packages = [{include = "lbc_immo"}]

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
pandas = "^1.5.3"
geojson = "^3.0.0"
unidecode = "^1.3.6"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
